# inspect

./: .gitignore  README.md  flake.nix  package.nix
.github/workflows/: release.yml  test-windows.yml
crates/inspect-api/: Cargo.toml
crates/inspect-cli/: Cargo.toml
crates/inspect-cli/src/: main.rs
crates/inspect-cli/src/commands/: diff.rs  file.rs  pr.rs  review.rs
crates/inspect-cli/src/formatters/: predict.rs  terminal.rs
crates/inspect-core/: Cargo.toml
crates/inspect-core/src/: analyze.rs  classify.rs  llm.rs  predict.rs  risk.rs  types.rs
crates/inspect-mcp/: Cargo.toml
