[package]
name = "inspect-core"
version = "0.1.1"
edition = "2021"

[dependencies]
sem-core = "0.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
base64 = "0.22"
futures = "0.3"
urlencoding = "2"
git2 = "0.20"
tempfile = "3"
